<resources>
    <string name="app_name">File Fire</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ppr_download">Wake Up PC</string>
    <string name="machint">Mac Address</string>
    <string name="wolstring">Wake On Lan</string>
    <string name="namehint">Device Name</string>
    <string name="iphint">Broadcast IP or Hostname</string>
    <string name="sftpiphint">Hostname or IP</string>
    <string name="sftpporthint">Port</string>
    <string name="sftppasshint">Password</string>
    <string name="sftpbutton">Connect</string>
    <string name="sftpuserhint">Username</string>
    <string name="dmessage">Test String
        This is new</string>
    <string name="positive_button">Okay</string>
    <string name="negative_button">Cancel</string>
    <string name="dtitle">Dialogue Box</string>
    <string name="clickme">Dialogue</string>
    <string name="dlistbutton">List</string>
    <string name="imagedescription">List</string>
    <string name="portscan">Get IP</string>
    <string name="file_picker">File Picker</string>
    <string name="file_explorer">File Explorer</string>
    <string name="serverstart">Start SFTP Server</string>
    <string name="dialogueToConnect">Browse Remote Files</string>
    <string name="ConnectTitle">Connect to Server</string>
    <string name="connect">Connect</string>
    <string name="savedetails">Save</string>
    <string name="stopserver">Stop Server</string>
    <string name="downloading">Please Wait...</string>
    <string name="download_dialog">Downloading</string>
    <string name="download_complete">Download Complete</string>
    <string name="connecting">Connecting</string>
    <string name="folderchooser">Pick Folder</string>
    <string name="filechooser">Pick File</string>
    <string name="selecttext">Select</string>
    <string name="rename">Rename</string>
    <string name="newname">Enter new name</string>
    <string name="showpass">Show Password</string>
    <string name="isremote">Remote Connect</string>
    <string name="confirmDeleteTitle">Confirm Action</string>
    <string name="confirmDelete">Are you Sure you want to delete this item?</string>
    <string name="delete_yes">Yes!</string>
    <string name="newdir">New Directory</string>
    <string name="upload_complete">Upload Complete</string>
    <string name="uploading">Uploading...</string>
    <string name="upload_dialogue">Upload File</string>
    <string name="hide_dialogue">Hide</string>
    <string name="serverstring">Host your Files</string>
    <string name="connecttoserver">Connect to Server</string>
    <string name="title_activity_settings">Settings</string>
    <string name="server_onboot">Start on Boot</string>
    <string name="public_server_details">Public Server Details</string>
    <string name="set_server_pass">Username and Password</string>
    <string name="file_server">File Server</string>
    <string name="register">Create</string>
    <string name="restore_wol">Restore Last</string>
</resources>
