<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">


<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_centerHorizontal="true"
    android:layout_centerVertical="true"
    android:id="@+id/buttonrow1"
    android:orientation="horizontal"
    android:layout_marginLeft="10pt"
    android:layout_marginRight="10pt"
    android:layout_marginStart="10pt"
    android:layout_marginEnd="10pt"
    >
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/dlistbutton"
        android:id="@+id/dialbutton"
        android:onClick="onListClick"
        android:layout_weight="1"


       />

    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/clickme"
        android:id="@+id/list_dialogue_multiple"
        android:layout_weight="1"
        android:onClick="DialogueTest"/>
    <Button
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/file_picker"
        android:id="@+id/file_picker"
        android:layout_weight="1"
        android:onClick="FilePicker"/>

</LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_below="@id/buttonrow1"
        android:orientation="vertical"
        android:layout_marginLeft="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginStart="10pt"
        android:layout_marginEnd="10pt"
        >

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/file_explorer"
            android:id="@+id/file_explorer"
            android:layout_weight="1"
            android:onClick="FileExplorer"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialogueToConnect"
            android:id="@+id/dialogueConnect"
            android:layout_weight="1"
            android:onClick="ShowConnectDialogue"/>
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/ipToExplorer"
            android:hint="@string/iphint"/>
</LinearLayout>

</RelativeLayout>