<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >
<RelativeLayout
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="30sp"
        android:gravity="center"
        android:id="@+id/textView"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/wolstring"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_marginLeft="10pt"
        android:layout_marginStart="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginTop="5pt"
        android:layout_marginEnd="10pt"
        android:layout_height="20pt"
        android:layout_centerInParent="true"
        android:layout_below="@+id/textView"
        android:hint="@string/namehint"
        android:id="@+id/devicename" />


    <EditText
        android:layout_width="match_parent"
        android:layout_marginLeft="10pt"
        android:layout_marginStart="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginEnd="10pt"
        android:layout_height="20pt"
        android:layout_centerInParent="true"
        android:layout_below="@+id/devicename"
        android:hint="@string/iphint"
        android:id="@+id/ipaddress" />

    <EditText
        android:layout_width="match_parent"
        android:layout_marginLeft="10pt"
        android:layout_marginStart="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginEnd="10pt"
        android:layout_height="20pt"
        android:layout_centerInParent="true"
        android:layout_below="@+id/ipaddress"
        android:hint="@string/machint"
        android:id="@+id/macaddress"
        android:inputType="textCapCharacters"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/macaddress"
        android:text="@string/ppr_download"
        android:id="@+id/ppr_download"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="gotoppr"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/ppr_download"
        android:text="@string/portscan"
        android:id="@+id/scan_ports"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:onClick="PortScan"/>


</RelativeLayout>
</ScrollView>