<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:custom="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent">
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="30sp"
        android:gravity="center"
        android:id="@+id/connectText"
        android:layout_centerHorizontal="true"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/connecttoserver"/>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/connectText"
        android:layout_marginLeft="10pt"
        android:layout_marginStart="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginTop="8pt"
        android:layout_marginEnd="10pt"
        android:layout_centerHorizontal="true"
        android:id="@+id/f_sftpuser"
        >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sftpuser"
        android:hint="@string/sftpuserhint"
         />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10pt"
        android:layout_marginStart="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginEnd="10pt"
        android:layout_centerHorizontal="true"
        android:id="@+id/f_sftpip"
        android:layout_below="@id/f_sftpuser"
        >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/sftpip"
        android:hint="@string/sftpiphint"
         />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>

    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10pt"
        android:layout_marginStart="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginEnd="10pt"
        android:layout_centerHorizontal="true"
        android:id="@+id/f_sftpport"
        android:layout_below="@id/f_sftpip"
        >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="number"
        android:id="@+id/sftpport"
        android:hint="@string/sftpporthint"
         />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>
    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10pt"
        android:layout_marginStart="10pt"
        android:layout_marginRight="10pt"
        android:layout_marginEnd="10pt"
        android:layout_centerHorizontal="true"
        android:id="@+id/f_sftppass"
        android:layout_below="@id/f_sftpport"
        >
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:id="@+id/sftppass"
        android:ems="10"
        android:hint="@string/sftppasshint"/>
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>
    <com.dd.processbutton.iml.ActionProcessButton
        android:id="@+id/filexbutton"
        custom:pb_colorComplete="@color/green_complete"
        custom:pb_colorPressed="@color/blue_pressed"
        custom:pb_colorProgress="@color/purple_progress"
        custom:pb_textComplete="Success"
        custom:pb_textProgress="Loading"
        custom:pb_textError="Error"
        custom:pb_colorError="@color/red_error"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/sftpbutton"
        android:layout_below="@id/f_sftppass"
        android:layout_centerVertical="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="10pt"
        android:onClick="sftpconnect"/>



</RelativeLayout>
</ScrollView>