<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2pt"
        android:layout_marginStart="2pt"
        android:layout_marginRight="2pt"
        android:layout_marginEnd="2pt"
        android:layout_centerHorizontal="true"
        android:id="@+id/p_psftpuser"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/sftpuserhint"
            android:id="@+id/psftpuser" />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>
    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2pt"
        android:layout_marginStart="2pt"
        android:layout_marginRight="2pt"
        android:layout_marginEnd="2pt"
        android:layout_centerHorizontal="true"
        android:id="@+id/p_psftpip"
        android:layout_below="@id/p_psftpuser"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:hint="@string/sftpiphint"
            android:id="@+id/psftpip" />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>
    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2pt"
        android:layout_marginStart="2pt"
        android:layout_marginRight="2pt"
        android:layout_marginEnd="2pt"
        android:layout_centerInParent="true"
        android:id="@+id/p_psftpport"
        android:layout_below="@id/p_psftpip"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:hint="@string/sftpporthint"
            android:id="@+id/psftpport"
            />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>
    <com.wrapp.floatlabelededittext.FloatLabeledEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="2pt"
        android:layout_marginStart="2pt"
        android:layout_marginRight="2pt"
        android:layout_marginEnd="2pt"
        android:layout_centerInParent="true"
        android:id="@+id/p_psftppass"
        android:layout_below="@id/p_psftpport"
        >
        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            android:ems="2"
            android:id="@+id/psftppass"
            android:hint="@string/sftppasshint" />
    </com.wrapp.floatlabelededittext.FloatLabeledEditText>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/p_psftppass"
        android:layout_margin="4dp">
        <CheckBox
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight=".5"
            android:text="@string/showpass"
            style="?android:textAppearanceSmall"
            android:id="@+id/p_savedetails"/>
    </LinearLayout>


</RelativeLayout>
